Ajuste do Historico de Preco